--- a/wishlist_frontend/package.json
+++ b/wishlist_frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^7.3.3",
     "axios": "^1.9.0",
     "expo": "~53.0.10",
-    "expo-camera": "^16.1.7",
+    "expo-camera": "~16.1.8",
     "expo-constants": "^17.1.6",
     "expo-device": "^7.1.4",
     "expo-image-picker": "^16.1.4",
@@ -29,16 +29,19 @@
     "react-native": "0.79.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
